# uhal

./: .clang-format  .clang-format-ignore  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .sonarcloud.properties  Doxyfile  Makefile  README.md  acq.cc  acq.h  decode-reg.c  decode-reg.cc  decode.c  decoder.c  decoder.cc  decoders.cc  decoders.h  lamp.cc  lamp.h  meson.build  meson_options.txt  pcie-open.h  pcie.c  pcie.h  printer.cc  printer.h  readRegs.c  util.cc  util.h
.github/workflows/: build-every.yml  build-sanitizers.yml  build.yml  doxygen.yml  static-analysis.yml
app/: bench-cp.cc  decode-reg.cc  meson.build
documentation/: design.md  hardware.md  history.md
etc/: 90-fpga-resources.rules
include/: meson.build
include/modules/: acq.h  ad9510.h  afc_timing.h  bpm_swap.h  fmc250m_4ch.h  fmc_active_clk.h  fmc_adc_common.h  fmcpico1m_4ch.h  fofb_cc.h  fofb_processing.h  fofb_shaper_filt.h  isla216p.h  lamp.h  meson.build  orbit_intlk.h  pos_calc.h  si57x_ctrl.h  spi.h  sysid.h  trigger_iface.h  trigger_mux.h
modules/: acq.cc  acq.h  ad9510.cc  afc_timing.cc  bpm_swap.cc  fmc250m_4ch.cc  fmc_active_clk.cc  fmc_adc_common.cc  fmcpico1m_4ch.cc  fofb_cc.cc  fofb_cc.h  fofb_processing.cc  fofb_processing.h  fofb_shaper_filt.cc  isla216p.cc  lamp.cc  lamp.h  lamp_v1.cc  lamp_v2.cc  meson.build  orbit_intlk.cc  pos_calc.cc  si57x_ctrl.cc  spi.cc  sysid.cc  trigger_iface.cc  trigger_iface.h  trigger_mux.cc  trigger_mux.h
modules/hw/: wb_acq_core_regs.h  wb_fofb_shaper_filt_regs.h  wb_pos_calc_regs.h  wb_slave_afc_timing_regs.h
subprojects/: .gitignore  argparse.wrap  ordered-map.wrap  sdbfs.wrap
subprojects/packagefiles/ordered-map/: meson.build
subprojects/packagefiles/sdbfs/: meson.build
templates/: add_module.sh  meson.build  mod_template.cc  mod_template.h
util/: controllers.cc  controllers.h  decoderbase.cc  decoders.cc  decoders.h  defer.h  meson.build  pcie-defs.h  pcie-open.cc  pcie-open.h  pcie.c  pcie.h  printer.cc  printer.h  sdb-defs.h  sdb.cc  si57x_util.cc  si57x_util.h  util-bits.h  util.cc  util.h  util_sdb.h
util/tests/: bits-test.cc  controllers-test.cc  copy-test.cc  decoders-test.cc  decoders-test.h  fixed-test.cc  list-of-keys-test.cc  meson.build  si57x-test.cc  test-util.cc  test-util.h
