install_headers(
  [
    'acq.h',
    'afc_timing.h',
    'bpm_swap.h',
    'fmc_active_clk.h',
    'fmcpico1m_4ch.h',
    'fofb_cc.h',
    'fofb_processing.h',
    'fofb_shaper_filt.h',
    'lamp.h',
    'orbit_intlk.h',
    'pos_calc.h',
    'si57x_ctrl.h',
    'sysid.h',
    'trigger_iface.h',
    'trigger_mux.h',
  ],
  subdir: join_paths(header_dir, 'modules')
)
